# KapYah-LogMiner

./: .gitignore  CODEOWNERS  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json  vite.config.ts
python_engine/: analyzer.py  build_backend.py  cli.py  export_report.py  requirements.txt  ulog_parser.py
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CesiumGlobePanel.tsx  EmptyStatePanel.tsx  LineChartPanel.tsx  MetricList.tsx  PlaybackControls.tsx  StartupSplash.tsx
src/components/tabs/: HelpSupportTab.tsx  MapTab.tsx  MessagesTab.tsx  OverviewDashboard.tsx  PowerTab.tsx  RcHealthTab.tsx  ReportsTab.tsx  TimelineTab.tsx  VibrationTab.tsx
src/layout/: AppSidebar.tsx
src/pages/: HomePage.tsx
src/types/: analysis.ts
src/utils/: timeFormat.ts
