[package]
name = "drone-log-analyzer-desktop"
version = "0.1.0"
description = "Windows-first offline drone log analysis desktop application"
authors = ["Internal Engineering Team"]
edition = "2021"

[lib]
name = "drone_log_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
